ove/hello-web/service.yaml
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: null
  labels:
    app: hello-web
  name: hello-web
spec:
  ports:
    - name: 80-80
      port: 80
      protocol: TCP
      targetPort: 80
  selector:
    app: helloworld
  type: ClusterIP
status:
  loadBalancer: {}
